# feeds-to-pocket

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  flake.nix  login-successful.md
src/: main.rs  main.rs.in  pocket.rs
systemd-examples/: README.md  feeds-to-pocket.service  feeds-to-pocket.timer
