[package]
name = "feeds-to-pocket"
version = "0.1.6"
authors = ["Francis Gagné <fragag1@gmail.com>"]
edition = "2021"
description = "Sends items from your RSS and Atom feeds to your Pocket list."
repository = "https://github.com/FraGag/feeds-to-pocket"
readme = "README.md"
keywords = ["atom", "feed", "pocket", "rss", "syndication"]
license = "MIT/Apache-2.0"
exclude = [".travis.yml"]

[dependencies]
atom_syndication = "0.6.0"
clap = { version = "4.3.1", features = ["derive"] }
quick-error = "1.2.3"
reqwest = { version = "0.11.18", features = ["blocking"] }
rss = "1.10.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
url = { version = "2.3.1", features = ["serde"] }
