[package]
name = "feeds-to-pocket"
version = "0.1.8"
authors = ["Francis Gagné <fragag1@gmail.com>"]
edition = "2021"
description = "Sends items from your RSS and Atom feeds to your Pocket list."
repository = "https://github.com/FraGag/feeds-to-pocket"
readme = "README.md"
keywords = ["atom", "feed", "pocket", "rss", "syndication"]
license = "MIT/Apache-2.0"
exclude = [".envrc", ".github", "flake.lock", "flake.nix"]

[dependencies]
atom_syndication = "0.12.4"
clap = { version = "4.5.20", features = ["derive"] }
quick-error = "2.0.1"
reqwest = { version = "0.12.8", features = ["blocking"] }
rss = "2.0.9"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
url = { version = "2.5.2", features = ["serde"] }
